flux/clusters/management/apps/infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical
  namespace: infisical
spec:
  selector:
    app: infisical
  type: ClusterIP
  ports:
  - name: infisical
    protocol: TCP
    port: 8080
    targetPort: 8080
